--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-base64-file-upload": "^1.0.4",
     "vue-wysiwyg": ""
   },
   "devDependencies": {
